Sag Changes
===========

Version 0.8.0
-------------

New Features

  * Support for setPathPrefix() from Sag-JS v0.1.0. Allows you to prepend all
    URLs with a string, which is especially useful when going through a proxy.

Fixed Bugs

  * SagNativeHTTPAdapter now supports and follows Location headers. (closes
    #37)

  * SagNativeHTTPAdapter's fgets() call no longer hangs on large responses that
    are not chunked encoded. This was fixed by providing a line length. Thanks
    to skyshard (github/skyshard) for helping with the debug. (closes #41)

  * Sag no longer uses ternary short hand that was introduced in PHP 5.3, so
    now PHP 5.2 will run without errors. Thanks to Jim Tittsler (github/jimt)
    for reporting and submitting the patch. (closes #43)

  * Disabled cache sizing for SagMemoryCache due to PHP's memory monitoring
    being unreliable. The memory cache is no longer capped by Sag. (closes #22)

  * Fixing an issue where the SagHTTPAdapter class's file wasn't being required
    properly, causing class not found exceptions.

Version 0.7.1
-------------

Fixed Bugs

  * The cURL HTTP library was choking on a HTTP/1.1 Continue header. Only some
    installations were running into this problem, depending on their cURL
    configuration and version.

Version 0.7.0
-------------

New Features

  * The HTTP socket code was abstracted out of the core Sag class into its own
    HTTP module. It is called SagNativeHTTPAdapter and remains the default
    transport mechanism. This allows for drivers to be written that leverage
    different HTTP libraries, potentially adding extra functionality. The
    SagNativeHTTPAdapter is referenced by the Sag::$HTTP_NATIVE_SOCKETS static
    public variable and can be specified with the setHTTPAdapter() function.
    (closes #12)

  * cURL can now be used when communicating with CouchDB, allowing for
    additional functionality. If your system has the cURL PHP extension